@startuml

class Main{
    -static Main instance
    -Stage stage
    +main()
    +start()
    +sendRegisterLocationPage()
    +sendWeatherInformationPage()
    -replaceSceneContent
    +static Main getInstance() return instance

}

class RegisterLocationPageView{
  FXML
}

class WeatherInformationPageView{
  FXML
}

class SettingPageView{
  FXML
}

class RegisterLocationPageController{
  +RegisterLocationPageController()
  +setUserSetting()
  +getUserSetting()
  +getCityData()
}

class WeatherInformationPageController{
  +WeatherInformationPageController()
  +setUserSetting()
  +getUserSetting()
  +getCityData()
  +getWeatherInformation()
  +getActivities()
  +getActivityDetail()
  +getItems()
}

class SettingPageController{
  +SettingPageController()
  +setUserSetting()
  +getUserSetting()

}

class GoodDayModel{
  -userData Array
  -itemData Array
  -activitiesData Array
  +GoodDayModel() // Prepare data
  +saveUserData()
  +getData()
  +googleMapApi()
}

class OpenWeatherMapAPI{
  -String apiKey;
  -HashMap<String,String>
  +OpenWeatherMapAPI() // Prepare data
  +openWeatherMap() resultWeatherInformation
}

Main -- RegisterLocationPageView
Main -- WeatherInformationPageView
Main -- SettingPageView
RegisterLocationPageView -- RegisterLocationPageController
WeatherInformationPageView -- WeatherInformationPageController
SettingPageView -- SettingPageController
SettingPageController -- GoodDayModel
RegisterLocationPageController -- GoodDayModel
WeatherInformationPageController -- GoodDayModel
WeatherInformationPageController -- OpenWeatherMapAPI

@enduml